--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@types/react-dom": "18.0.10",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "js-beautify": "^1.14.7",
     "next": "13.1.1",
+    "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
