--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "13.1.1",
     "prettier": "^2.8.1",
     "react": "18.2.0",
+    "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.57.1",
