--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vercel/analytics": "^0.1.6",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "firebase": "^9.15.0",
     "js-beautify": "^1.14.7",
     "next": "13.1.1",
     "prettier": "^2.8.1",
