--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.1.1",
     "prettier": "^2.8.1",
     "react": "18.2.0",
+    "react-codepen-embed": "^1.1.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
     "react-share": "^4.4.1",
