--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -24,6 +25,7 @@
     "react-codepen-embed": "^1.1.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-share": "^4.4.1",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.57.1",
