--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ctrl/react-adsense": "^1.6.1",
     "@next/font": "13.1.1",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
@@ -18,6 +19,7 @@
     "eslint-config-next": "13.1.1",
     "js-beautify": "^1.14.7",
     "next": "13.1.1",
+    "nextjs-progressbar": "^0.0.16",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-debounce-input": "^3.3.0",
