--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.1.1",
     "js-beautify": "^1.14.7",
     "next": "13.1.1",
+    "next-seo": "^5.15.0",
     "nextjs-progressbar": "^0.0.16",
     "prettier": "^2.8.1",
     "react": "18.2.0",
