--- a/package.json
+++ b/package.json
@@ -9,20 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
     "@next/font": "13.1.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/analytics": "^0.1.6",
+    "axios": "^1.3.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "js-beautify": "^1.14.7",
+    "monaco-themes": "^0.4.3",
     "next": "13.1.1",
     "nextjs-progressbar": "^0.0.16",
     "prettier": "^2.8.1",
     "react": "18.2.0",
     "react-debounce-input": "^3.3.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "react-syntax-highlighter": "^15.5.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
